@startuml Strategy_Pattern
skinparam classAttributeIconSize 0

interface ClassBonusStrategy {
    + getHeroClass(): HeroClass
    + applyLevelBonus(hero: Hero): void
}

class OrderBonusStrategy {
    + getHeroClass(): HeroClass
    + applyLevelBonus(hero: Hero): void
}

class ChaosBonusStrategy {
    + getHeroClass(): HeroClass
    + applyLevelBonus(hero: Hero): void
}

class WarriorBonusStrategy {
    + getHeroClass(): HeroClass
    + applyLevelBonus(hero: Hero): void
}

class MageBonusStrategy {
    + getHeroClass(): HeroClass
    + applyLevelBonus(hero: Hero): void
}

class HeroStatCalculator {
    - strategies: List<ClassBonusStrategy>
    + applyLevelUp(hero: Hero, heroClass: HeroClass): void
    + applyClassBonusOnly(hero: Hero, heroClass: HeroClass): void
    - applyClassBonus(hero: Hero, heroClass: HeroClass): void
    - getStrategy(heroClass: HeroClass): ClassBonusStrategy
}

ClassBonusStrategy <|.. OrderBonusStrategy
ClassBonusStrategy <|.. ChaosBonusStrategy
ClassBonusStrategy <|.. WarriorBonusStrategy
ClassBonusStrategy <|.. MageBonusStrategy
HeroStatCalculator o-- ClassBonusStrategy : uses list of >

@enduml